# zmax

./: .gitignore  .gitmodules  404.html  CHANGELOG.md  Cargo.toml  FAQ.md  README.md  SCRIPTING_EMBED_PLAN.md  base16_theme.toml  building-from-source.html  command-line.html  commands.html  configuration.html  default.nix  ecosystem.html  editor.html  flake.nix  from-vim.html  grammars.nix  index.html  install.html  jumplist.html  keymap.html  lang-support.html  languages.html  languages.toml  lsp.html  other-software.html  package-managers.html  package.json  pickers.html  print.html  registers.html  remapping.html  scripting.html  searcher-09f2665d.js  searchindex-1505604d.js  searchindex-26660912.js  searchindex-44362628.js  searchindex-59ee201d.js  (+19 more)
.cargo/: config.toml
.github/: FUNDING.yml
.zemacs/: run-configs.toml
book/: book.toml
contrib/: Zemacs.appdata.xml
docs/: BUGS.md  CONTRIBUTING.md  IDE_PREFERENCES_PLAN.md  LANGUAGE_INJECTION.md  architecture.md  index.html  keybinding_report.html  keybinding_report.md  port_report.html  port_report.md  releases.md  report.html  spacemacs_gaps.md  vim_options_build_map.md  vision.md
guides/: adding_languages.html  highlights.html  indent.html  index.html  injection.html  locals.html  rainbow_bracket_queries.html  tags.html  textobject.html
main/: 404.html  building-from-source.html  command-line.html  commands.html  configuration.html  custom-a25da550.css  ecosystem.html  editor.html  from-vim.html  index.html  install.html  jumplist.html  keymap.html  lang-support.html  languages.html  lsp.html  other-software.html  package-managers.html  pickers.html  print.html  registers.html  remapping.html  scripting.html  searcher-09f2665d.js  searchindex-0159dd65.js  searchindex-04bc21be.js  searchindex-05e02b22.js  searchindex-068bcc20.js  searchindex-0988a70c.js  searchindex-0a6fcc41.js  searchindex-0b00974d.js  searchindex-0d321e36.js  searchindex-0ebb57a9.js  searchindex-0f1bb5f7.js  searchindex-0f7a3749.js  searchindex-10290337.js  searchindex-12b6cd82.js  searchindex-12d962ee.js  searchindex-1329bbdc.js  searchindex-13415d0e.js  (+257 more)
port/: README.md  mapping.json
runtime/: tutor
scripts/: gen_dunnet_data.py  gen_port_report.py  install.sh  release.sh
target-zport/: .rustc_info.json
v0.2.14/: building-from-source.html  custom-16ed19e8.css  from-vim.html  index.html  install.html  jumplist.html  keymap.html  languages.html  package-managers.html  pickers.html  print.html  surround.html  textobjects.html  toc-9094bf62.js  usage.html
zemacs-term/: Cargo.toml
zemacs-term/src/: appdata.rs  application.rs  args.rs  blame.rs  ci.rs  closed_files.rs  commands.rs  config.rs  emacs_abbrev.rs  emacs_bookmark.rs  emacs_kill.rs  emacs_rect.rs  emmet.rs  file_watcher.rs  handlers.rs  harpoon.rs  health.rs  hi_lock.rs  job.rs  keymap.rs  lib.rs  logging.rs  main.rs  recent_files.rs  run_config.rs  snippet_store.rs  spell.rs  vim_autocmd.rs  vim_conceal.rs  vim_fold.rs  vim_modeline.rs  vim_regex.rs  vim_swap.rs  zemacsinfo.rs  zwire.rs
zemacs-term/src/ai/: agent.rs  anthropic.rs  mod.rs  openai.rs  web.rs
zemacs-term/src/commands/: dap.rs  host.rs  lsp.rs  org.rs  scripting_stub.rs  syntax.rs  typed.rs  vim_options_data.rs
zemacs-term/src/commands/scripting/: awk.rs  capture.rs  elisp.rs  mod.rs  stryke.rs  viml.rs  viml_theme.rs  zsh.rs
zemacs-term/src/embedded/: mod.rs
zemacs-term/src/handlers/: ai_ghost.rs  auto_save.rs  closed_files.rs  code_action_hint.rs  completion.rs  document_colors.rs  document_links.rs  signature_help.rs
zemacs-term/src/handlers/completion/: item.rs  request.rs  resolve.rs  sql.rs
zemacs-term/src/keymap/: default.rs  emacs.rs  major_mode.rs  spacemacs.rs  vim.rs  vim_map.rs
zemacs-term/src/ui/: animate.rs  asteroids.rs  battleship.rs  blackjack.rs  bomberman.rs  bookmark.rs  breakout.rs  bubbles.rs  bufmenu.rs  calc.rs  calendar.rs  centipede.rs  checkers.rs  chess.rs  comint.rs  completion.rs  connectfour.rs  context_menu.rs  dashboard.rs  diffmode.rs  digdug.rs  dired.rs  doctor.rs  document.rs  donkeykong.rs  dunnet.rs  dunnet_data.rs  editor.rs  facemenu.rs  fifteen.rs  file_tree.rs  flappy.rs  frogger.rs  galaga.rs  hangman.rs  help.rs  hex.rs  icons.rs  ide.rs  info.rs  (+59 more)
zemacs-term/src/ui/lsp/: hover.rs  signature_help.rs
zemacs-term/src/ui/picker/: handlers.rs
zemacs-term/tests/: arduino_compile.rs  custom_source_files.rs  integration.rs  serial_plotter_stream.rs
zemacs-term/tests/fixtures/injection/: Component.vue  Dao.kt  Repo.cs  UserRepo.java  app.ts  dao.py  notes.md  polyglot.html  store.go
zemacs-term/tests/test/: abbrev_mode.rs  auto_reload.rs  changelist.rs  command_line.rs  commands.rs  complete_statement.rs  dot_repeat.rs  emacs_keys.rs  git_gutter.rs  helpers.rs  injection.rs  movement.rs  operator_count.rs  reflow.rs  splits.rs  undojoin.rs  vim_motions.rs  vim_search.rs
zemacs-term/tests/test/commands/: insert.rs  movement.rs
zemacs-view/: Cargo.toml
zemacs-view/src/: clipboard.rs  document.rs  editor.rs  gutter.rs  handlers.rs  info.rs  input.rs  lib.rs  register.rs  theme.rs  tree.rs  view.rs
zemacs-view/src/annotations/: diagnostics.rs
zemacs-view/src/handlers/: ai_ghost.rs  dap.rs  diagnostics.rs  word_index.rs
zmax-plugin/: Cargo.toml  README.md
zmax-plugin/examples/hello-plugin/: Cargo.toml
zmax-plugin/examples/hello-plugin/src/: lib.rs
zmax-plugin/src/: lib.rs
zmax-term/: Cargo.toml
zmax-term/src/: application.rs  commands.rs  emacs_abbrev.rs  eww.rs  file_watcher.rs  keymap.rs  lib.rs  spell.rs  vim_swap.rs
zmax-term/src/commands/: org.rs  plugin.rs  scripting_stub.rs  typed.rs
zmax-term/src/commands/scripting/: mod.rs  viml.rs
zmax-term/src/handlers/: completion.rs
zmax-term/src/keymap/: emacs.rs  major_mode.rs  spacemacs.rs  vim.rs
zmax-term/src/ui/: comint.rs  diffmode.rs  dired.rs  docview.rs  editor.rs  help.rs  image.rs  magit.rs  mod.rs  package_menu.rs  preferences.rs  prompt.rs  repl.rs  settings.rs  statusline.rs
zmax-term/tests/: integration.rs
zmax-term/tests/test/: tag_stack.rs  vim_search.rs
(+928 files in other folders)
