[workspace]
resolver = "2"
members = [
  "zemacs-core",
  "zemacs-view",
  "zemacs-term",
  "zemacs-tui",
  "zemacs-lsp-types",
  "zemacs-lsp",
  "zemacs-event",
  "zemacs-dap-types",
  "zemacs-dap",
  "zemacs-loader",
  "zemacs-vcs",
  "zemacs-parsec",
  "zemacs-stdx",
  "xtask",
]

default-members = [
  "zemacs-term"
]

# The embedded scripting interpreters (elisprs/vimlrs/awkrs/zshrs/strykelang)
# are vendored as git submodules under vendor/ so CI can resolve the optional
# path dependencies. They are independent crates/workspaces — exclude them from
# this workspace so Cargo treats them purely as external path dependencies.
exclude = [
  "vendor",
]

[profile.release]
lto = "thin"

[profile.opt]
inherits = "release"
lto = "fat"
codegen-units = 1
strip = true
opt-level = 3

[profile.integration]
inherits = "test"
package.zemacs-core.opt-level = 2
package.zemacs-tui.opt-level = 2
package.zemacs-term.opt-level = 2

[workspace.dependencies]
tree-house = { version = "0.4", default-features = false }
nucleo = "0.5.0"
slotmap = "1.1.1"
thiserror = "2.0"
tempfile = "3.27.0"
bitflags = "2.12"
unicode-segmentation = "1.13"
ropey = { version = "1.6.1", default-features = false, features = ["simd"] }
foldhash = "0.2"
parking_lot = "0.12"
futures-executor = "0.3"
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
tokio-stream = "0.1.18"
toml = "1.1"
termina = "0.3"
sonic-rs = "0.5"
globset = "0.4"
etcetera = "0.11"
arc-swap = "1.9"
arrayvec = "0.7"

# dev dependencies
criterion = { version = "0.8", default-features = false, features = ["cargo_bench_support"] }
quickcheck = { version = "1", default-features = false }

[workspace.package]
version = "0.4.20"
edition = "2021"
authors = ["MenkeTechnologies <linux.dev25@gmail.com>"]
categories = ["editor"]
repository = "https://github.com/MenkeTechnologies/zemacs"
homepage = "https://github.com/MenkeTechnologies/zemacs"
license = "MPL-2.0"
rust-version = "1.90"
