[package]
name = "zemacs-view"
description = "UI abstractions for use in backends"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
# Skip libtest benchmark harness, the benches use criterion.
# cargo bench -p zemacs-view --features bench
bench = false

[features]
default = []
term = ["termina", "crossterm"]
unicode-lines = []
# Exposes internals. Should not be enabled except for benchmarking.
bench = []

[dependencies]
zemacs-stdx = { path = "../zemacs-stdx" }
zemacs-core = { path = "../zemacs-core" }
zemacs-event = { path = "../zemacs-event" }
zemacs-loader = { path = "../zemacs-loader" }
zemacs-lsp = { path = "../zemacs-lsp" }
zemacs-dap = { path = "../zemacs-dap" }
zemacs-vcs = { path = "../zemacs-vcs" }

bitflags.workspace = true
foldhash.workspace = true
anyhow = "1"
termina = { workspace = true, optional = true }

tempfile.workspace = true

# Conversion traits
once_cell = "1.21"

arc-swap.workspace = true

tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot"] }
tokio-stream = "0.1"
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }

slotmap.workspace = true

chardetng = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml.workspace = true
log = "~0.4"

parking_lot.workspace = true
thiserror.workspace = true

kstring = "2.0"

[target.'cfg(windows)'.dependencies]
clipboard-win = { version = "5.4", features = ["std"] }
crossterm = { version = "0.29", optional = true }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
rustix = { version = "1.1", features = ["fs"] }

[dev-dependencies]
zemacs-tui = { path = "../zemacs-tui" }
criterion.workspace = true
quickcheck.workspace = true

[[bench]]
name = "word_index"
harness = false
required-features = ["bench"]
