[package]
name = "zmax-term"
description = "A post-modern IDE."
include = ["src/**/*", "README.md"]
default-run = "zmax"
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
categories.workspace = true
repository.workspace = true
homepage.workspace = true

[package.metadata.deb]
# generate a .deb in target/debian/ with the command: cargo deb --no-build
name = "zmax"
assets = [
  { source = "target/release/zmax", dest = "/usr/lib/zmax/", mode = "755" },
  { source = "../contrib/hx_launcher.sh", dest = "/usr/bin/hx", mode = "755" },
  { source = "../runtime/*", dest = "/usr/lib/zmax/runtime/", mode = "644" },
  { source = "../runtime/grammars/*", dest = "/usr/lib/zmax/runtime/grammars/", mode = "644" }, # to avoid sources/
  { source = "../runtime/queries/**/*", dest = "/usr/lib/zmax/runtime/queries/", mode = "644" },
  { source = "../runtime/themes/**/*", dest = "/usr/lib/zmax/runtime/themes/", mode = "644" },
  { source = "../README.md", dest = "/usr/share/doc/zmax/", mode = "644" },
  { source = "../contrib/completion/hx.bash", dest = "/usr/share/bash-completion/completions/hx", mode = "644" },
  { source = "../contrib/completion/hx.fish", dest = "/usr/share/fish/vendor_completions.d/hx.fish", mode = "644" },
  { source = "../contrib/completion/hx.zsh", dest = "/usr/share/zsh/vendor-completions/_hx", mode = "644" },
  { source = "../contrib/Zmax.desktop", dest = "/usr/share/applications/Zmax.desktop", mode = "644" },
  { source = "../contrib/zmax.png", dest = "/usr/share/icons/hicolor/256x256/apps/zmax.png", mode = "644" },
]

[features]
default = ["git", "scripting"]
unicode-lines = ["zmax-core/unicode-lines", "zmax-view/unicode-lines"]
integration = ["zmax-event/integration_test"]
git = ["zmax-vcs/git"]
# Embedded scripting languages (elisp/viml/awk, plus unix-only zsh/stryke) wired
# into `commands::scripting` and the REPL. On by default. Drop it (e.g.
# `cargo build --no-default-features --features git`) to build zmax without any
# of the interpreter crates: the `:elisp`/`:vim`/`:awk`/`:zsh`/`:stryke` commands
# and the REPL then report that scripting wasn't compiled in.
scripting = ["dep:elisprs", "dep:vimlrs", "dep:awkrs", "dep:tempfile", "dep:zsh", "dep:stryke"]

[[bin]]
name = "zmax"
path = "src/main.rs"

[dependencies]
zmax-stdx = { path = "../zmax-stdx" }
zmax-core = { path = "../zmax-core" }
zmax-event = { path = "../zmax-event" }
zmax-view = { path = "../zmax-view" }
zmax-lsp = { path = "../zmax-lsp" }
zmax-dap = { path = "../zmax-dap" }
zmax-vcs = { path = "../zmax-vcs" }
zmax-loader = { path = "../zmax-loader" }

# Native (compiled Rust) plugin host: the frozen C-ABI SDK plus dlopen. Always
# on (not behind `scripting`) — it does not depend on any embedded interpreter.
zmax-plugin = { path = "../zmax-plugin" }
libloading = { workspace = true }

# Embedded scripting engines wired into the `commands::scripting` host. They
# live as sibling meta-repo submodules, consumed by path so local edits are
# picked up. Both run on fusevm (0.14.x, unified via semver).
elisprs = { path = "../vendor/elisprs", optional = true }                          # Emacs Lisp
# vimlrs (nix) and awkrs (nix/rug/gmp-mpfr-sys) are unix-only; see target deps below.
# zsh (embedded shell command runner) is unix-only; see the target deps below.
tempfile = { workspace = true, optional = true }            # zsh output capture (temp-file fd redirect)

anyhow = "1"
once_cell = "1.21"
notify = "6"
# line-level diff for the side-by-side diff viewer (ui::merge); same version
# zmax-core uses, so it resolves to a single copy.
imara-diff = "0.2.0"

tokio = { version = "1", features = ["rt", "rt-multi-thread", "io-util", "io-std", "time", "process", "macros", "fs", "parking_lot"] }
tui = { path = "../zmax-tui", package = "zmax-tui", default-features = false, features = ["termina", "crossterm"] }
# ratatui widgets (List/Table/Scrollbar/Block/Gauge/Chart/Canvas/Calendar) rendered offscreen and
# blitted onto the tui Surface via ui::rat — backend-less, so it doesn't pull a second terminal
# backend. `widget-calendar` enables the Calendar widget (used by the stats Dashboard).
ratatui = { version = "0.29", default-features = false, features = ["widget-calendar"] }
termina = { workspace = true, features = ["event-stream"] }
signal-hook = "0.4"
tokio-stream = "0.1"
futures-util = { version = "0.3", features = ["std", "async-await"], default-features = false }
arc-swap.workspace = true
termini = "1"
indexmap = { version = "2.14", features = ["serde"] }

# Logging
log = { version = "0.4", features = ["std"] }

# File picker
nucleo.workspace = true
ignore = "0.4"
grep-regex = "0.1"
grep-searcher = "0.1"
regex = "1"
grep-matcher = "0.1"
# markdown doc rendering
pulldown-cmark = { version = "0.13", default-features = false }
thiserror.workspace = true

# opening URLs
open = "5.3.5"

# config
toml.workspace = true
# Format-preserving TOML editing for the zwire `global.toml` write-back: only
# the `[theme]` scheme / `ui.light` values are touched, leaving zwire's other
# keys (anim, glow, scanlines, …) and layout intact.
toml_edit = "0.22"

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }

# Decodes base64 stdout/stderr from zwire-host `exec` replies (commands::host).
base64 = "0.22"

# CI status panel: GitHub Actions REST API over HTTP (blocking; called on a
# spawn_blocking task). Already in the graph transitively, so no new TLS stack.
# `json` feature is required for `.send_json()` in src/ai/*. Declare it here so
# the minimal build (--no-default-features, no scripting crates to unify it) still
# has it — otherwise the release's minimal target fails to compile.
ureq = { version = "2", features = ["json"] }

# The package subsystem (emacs `package.el`): an ELPA archive serves each package
# as a `<name>-<version>.tar`, so installing one means unpacking a tar. `tar`
# rejects entries that would escape the destination directory, which is what makes
# unpacking a downloaded archive safe. `flate2` handles the gzipped variant
# (`.tar.gz`), which `package-install-file` accepts for a locally-built package.
tar = "0.4"
flate2 = "1"

dashmap = "6.2"

# System stats for the Preferences → Dashboard tab (CPU/memory/process/disks/net).
sysinfo = "0.38"
# `time::Date` for the Dashboard's Calendar widget.
time = "0.3"
# Small, self-seeding PRNG for the insert generators (UUIDs, passwords).
fastrand = "2"
# Integrated terminal: a real PTY (portable-pty) parsed into a screen grid (vt100).
portable-pty = "0.8"
vt100 = "0.15"

parking_lot.workspace = true

[target.'cfg(windows)'.dependencies]
crossterm = { version = "0.28", features = ["event-stream"] }

[target.'cfg(not(windows))'.dependencies]  # https://github.com/vorner/signal-hook/issues/100
signal-hook-tokio = { version = "0.4", features = ["futures-v0_3"] }
libc = "0.2.186"
vimlrs = { path = "../vendor/vimlrs", optional = true }    # Vimscript (VimL); pulls nix (unix only)
awkrs = { path = "../vendor/awkrs", optional = true }                              # AWK; pulls nix + rug/gmp-mpfr-sys (unix only)
zsh = { path = "../vendor/zshrs", package = "zshrs", optional = true }            # embedded zsh shell (unix only)
stryke = { path = "../vendor/strykelang", package = "strykelang", optional = true } # embedded Perl (unix only; pulls zshrs)

[build-dependencies]
zmax-loader = { path = "../zmax-loader" }

[dev-dependencies]
smallvec = "1.15"
indoc = "2.0.6"
tempfile.workspace = true
same-file = "1.0.1"
